# emb-diversity

./: .gitignore  CLAUDE.md  LICENSE  README.md  optimization_doc.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_config.yml  bug_report.md  feature_config.yml
.github/workflows/: docs.yml  publish-pypi.yml  publish-testpypi.yml  test.yml
assets/: correlation_grouped.py  measures_correlated.json
benchmarks/: bench_pairwise_cache.py
docs/: Makefile  README.md
docs/source/: conf.py  development.md  index.md  index.rst  modules.rst  notes.md
docs/source/_static/: custom.css
docs/source/user-guide/: adding-a-measure.md  axes.md  cache.md  cli.md  configuration.md  development-notes.md  embeddings.md  measures.md  progress.md  vectors.md
examples/: 2d_experiments.ipynb  README.md  colab_demo.ipynb  compare_style_vs_semantic.py  diversity_compare.py  gede_diversity.py  gede_essays.py  gede_plot.py  pan25_generated_content.py  plot-examples.ipynb  speaker_diversity.py  style_diversity_demo.py  test_eval_measures.py  test_eval_style_data.py  test_mrpc_diversity.py  test_s1_diversity.py  text_experiments.ipynb  timing_measures_v2.py
examples/style_diversity_demo/: _quad_stel-dimensions_formal-815_complex-815.tsv  style_diversity_demo.py
measure_diversity/: __init__.py
pilot_datasets/: mrpc_paraphrases.csv
pilot_datasets/semantic_diversity/: README.md  mrpc_low_diversity.txt  qqp_low_diversity.txt  reuters_2-topic.txt  reuters_8-topic.txt  stsb_high_diversity.txt  stsb_low_diversity.txt
pilot_datasets/semantic_diversity/1_variety/: variety_1class_business_1k.txt  variety_2class_b500_s500.txt  variety_3class_b333_s333_s334.txt  variety_4class_equal_250.txt
pilot_datasets/semantic_diversity/2_balance/: balance_b100_s900.txt  balance_b300_s700.txt  balance_b500_s500.txt  balance_b700_s300.txt  balance_b900_s100.txt
pilot_datasets/semantic_diversity/3_disparity/: disparity_baseball_autos_500_500.txt  disparity_baseball_hockey_500_500.txt  disparity_baseball_sci_med_500_500.txt
pilot_datasets/semantic_diversity/4_paraphrase/: para_500*2_qwen.txt  para_500*2_successive1.txt  para_500*2_successive10.txt  para_500*2_successive15.txt  para_500*2_successive5.txt  para_500+100*5.txt  para_500+50*10.txt  para_pairs_500x2_mrpc.txt  para_texta_shared500_qwen_complex_paraphrased.txt
pilot_datasets/semantic_diversity/5_duplication/: agnews_b200+dup800.txt  agnews_b400+dup600.txt  agnews_b600+dup400.txt  agnews_b800+dup200.txt  dup_texta_500x2.txt  mrpc_500.txt
pilot_datasets/semantic_diversity/STS_based/: mrpc_high_diversity.txt  qqp_high_diversity.txt
pilot_datasets/semantic_diversity/topic_based/: 20NewsGroups_12-topics.txt  20NewsGroups_18-topics.txt  20NewsGroups_2-topics.txt  20NewsGroups_20-topics.txt  20NewsGroups_4-topics.txt  20newsgroups_10-topics.txt  20newsgroups_14-topics.txt  20newsgroups_16-topics.txt  20newsgroups_6-topics.txt  20newsgroups_8-topics.txt  agnews_1-topic.txt  agnews_2-topics.txt  agnews_3-topics.txt  agnews_4-topics.txt  reuters_4-topic.txt  reuters_6-topics.txt
pilot_datasets/style_diversity/: create_formal-diveristy_fromSTEL.ipynb  discover_synthstel.ipynb
pilot_datasets/style_diversity/s1/: math500-reasoning_s1.1_responses.csv  math500-reasoning_s1_responses.csv  math500_s1.1_responses.csv  math500_s1_responses.csv
src/: 2d_experiments.ipynb  text_experiments.ipynb
src/emb_diversity/: __init__.py  _accepts_text.py  _registry.py  _validation.py  axes_registry.py  cli.py  compute_pairwise.py  convenience.py  embed.py  measures_registry.py
src/emb_diversity/embeddings/: _embed_numpy.py  embed.py  embed_audio.py  embed_text.py
src/emb_diversity/measures/: _types.py  _umap.py  bins_entropy.py  bottleneck.py  chamfer_dist.py  cluster_inertia.py  convex_hull_volume_2d.py  convex_hull_volume_3d.py  dcscore.py  diameter.py  dist_dispersion.py  energy.py  geo_mean_std.py  graph_entropy.py  hamdiv.py  knn.py  log_determinant.py  mag_areas.py  mean_pw_dist.py  mst_dispersion.py  radius.py  renyi_entropy.py  span_centroid.py  span_medoid.py  sum_bottleneck.py  sum_diameter.py  sum_pairwise_dist.py  sum_pw_dist.py  types.py  utils.py  vendi_score.py
src/emb_diversity/plot/: plot-examples.ipynb  utils.py  visualize.py
src/emb_diversity/utility/: __init__.py  _cache.py  _cache_root.py  _progress.py  _registry.py  validate.py
src/embeddings/: SBERT.py
src/embediver/: __init__.py  _accepts_text.py  _axes.py  _convenience.py  _embed.py  _registry.py  axes_registry.py  cli.py  convenience.py  embed.py  measures_registry.py
src/embediver/embeddings/: SBERT.py  embed.py
src/embediver/measures/: _types.py  bins_entropy.py  bottleneck.py  chamfer_dist.py  cluster_inertia.py  convex_hull_volume.py  convex_hull_volume_2d.py  dcscore.py  diameter.py  dist_dispersion.py  energy.py  graph_entropy.py  hamdiv.py  log_determinant.py  mag_areas.py  mean_pw_dist.py  mst_dispersion.py  radius.py  renyi_entropy.py  span_centroid.py  span_medoid.py  sum_diameter.py  utils.py  vendi_score.py
src/embediver/utility/: project_root.py
src/measure_diversity/: __init__.py  _cache.py  compute_kernel.py  compute_pairwise.py  embed.py  evaluate_measures.py  measure.py  two_d.py
src/measure_diversity/embeddings/: SBERT.py  SimCSE.py  embed.py
src/measure_diversity/measures/: bins_based_entropy.py  bottleneck.py  (+21 more)
test/: test_SBERT.py  test_all_measures.py  test_cli_params.py  test_compute_kernel_cache.py  test_compute_pairwise_cache.py  test_convenience.py  test_cosine_blas_path.py  test_cosine_validation.py  test_custom_measure.py  test_diversity.py  test_dual_kernel.py  test_embed_audio.py  test_embed_cache.py  test_embed_validation.py  test_encode.py  test_eval_measures.py  test_eval_style_data.py  test_hello.py  test_input_validation.py  test_kernel_zero_norm_warning.py  test_large_dataset_warning.py  test_lazy_import.py  test_mag_areas.py  test_measure_sets.py  test_non_finite_validation.py  test_progress.py  test_runtime_measures.py  test_shape_validation.py  test_string_vector_rejection.py  test_two_d.py  test_umap_warning.py
(+15 files in other folders)
