[build-system]
requires = ["setuptools>=61.0"] # Ensure setuptools is at least version 61.0, which supports pyproject.toml
build-backend = "setuptools.build_meta" # Use setuptools as the build backend

[project]
name = "emb-diversity"
version = "0.0.7"
description = "A package for measuring diversity in text and vector data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["diversity", "nlp", "embeddings", "emb-diversity", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
authors = [
    {name = "Cantao Su", email = "c.su@uu.nl"},
    {name = "Menan Velayuthan", email = "m.velayuthan@uu.nl"},
    {name = "Esther Ploeger", email = "e.ploeger@uu.nl"},
    {name = "Dong Nguyen", email = "d.p.nguyen@uu.nl"},
    {name = "Anna Wegmann", email = "a.m.wegmann@uu.nl"},
]
dependencies = [
    "matplotlib>=3.7",
    "networkx>=2.8.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "sentence-transformers>=2.7.0",
    "torch>=2.10.0",
    "typer>=0.9.0",
    "umap-learn>=0.5.9",
    "vendi-score>=0.0.3",
]

[project.urls]
Homepage = "https://github.com/nlpsoc/Diversity-Measurement"
Documentation = "https://nlpsoc.github.io/Diversity-Measurement/"
Repository = "https://github.com/nlpsoc/Diversity-Measurement"
"Bug Tracker" = "https://github.com/nlpsoc/Diversity-Measurement/issues"

[project.scripts]
emb-diversity = "emb_diversity.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=5.0.0",
]
dev = [
    "datasets>=5.0.0",
    "dill>=0.4.1",
    "multiprocess>=0.70.17",
    "notebook>=7.0.0",
    "matplotlib~=3.10.0",
    "numpy~=2.3.5",
    "pandas~=2.3.1",
    "plotly>=5.0.0",
    "pytest~=8.4.1",
    "scikit-learn~=1.7.1",
    "scipy~=1.16.0",
    "sentence-transformers>=2.7.0",
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=5.0.0",
    "umap-learn>=0.5.9",
]

[tool.pytest.ini_options]
testpaths = ["test"]
norecursedirs = ["examples", "build", "dist"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (slow, requires internet)"
]
